[gd_scene load_steps=2 format=3 uid="uid://3cpu6i5ca2kr"]

[ext_resource type="Script" path="res://days/day2/game2.gd" id="1_oyqgk"]

[node name="Game2" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00614548, 0, 0.00335741)
script = ExtResource("1_oyqgk")

[node name="RedCubeSpawn" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1.0757, 0)
layers = 0
size = Vector3(0.6, 0.6, 1.5)

[node name="GreenCubeSpawn" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07611, 0)
layers = 0
size = Vector3(0.6, 0.6, 1.5)

[node name="BlueCubeSpawn" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.0757, 0)
layers = 0
size = Vector3(0.6, 0.6, 1.5)

[node name="RedEnvironment" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)
layers = 3
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(2, 0.1, 3)

[node name="GreenEnvironment" type="CSGBox3D" parent="."]
layers = 3
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(2, 0.1, 3)

[node name="BlueEnvironment" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
layers = 3
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(2, 0.1, 3)

[node name="RedEnvironment2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.900571, 0)
layers = 3
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(2, 0.1, 3)

[node name="GreenEnvironment2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.900571, 0)
layers = 3
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(2, 0.1, 3)

[node name="BlueEnvironment2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.900571, 0)
layers = 3
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(2, 0.1, 3)

[node name="StartRoundEvaluation" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="StartRoundEvaluation" to="." method="_on_start_round_evaluation_timeout"]
